--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 
 /.vs/CindySy_CodingTask/FileContentIndex/3fc13936-b12b-4f6e-910d-a4d214467623.vsidx
 /.vs/CindySy_CodingTask/FileContentIndex/d2288f50-160f-4c22-83d6-42ac8f68b462.vsidx
+*.vsidx
